mdapi/Custom/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Cell_Carrier__c</fullName>
        <inlineHelpText>Please select the contact&apos;s mobile phone carrier.</inlineHelpText>
        <label>Cell Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alltel</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T</fullName>
                </value>
                <value>
                    <fullName>Boost</fullName>
                </value>
                <value>
                    <fullName>Metro PCS</fullName>
                </value>
                <value>
                    <fullName>Nextel</fullName>
                </value>
                <value>
                    <fullName>Sprint PCS</fullName>
                </value>
                <value>
                    <fullName>T-Mobile</fullName>
                </value>
                <value>
                    <fullName>US Cellular</fullName>
                </value>
                <value>
                    <fullName>Verizon</fullName>
                </value>
                <value>
                    <fullName>Virgin Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName + &apos; &apos; + LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Longer_With_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Longer With Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BK Intake Contact</fullName>
                </value>
                <value>
                    <fullName>Eviction Contact</fullName>
                </value>
                <value>
                    <fullName>Rehab Crew Intake Contact</fullName>
                </value>
                <value>
                    <fullName>Lawn Maintenance Intake Contact</fullName>
                </value>
                <value>
                    <fullName>Pool Maintenance Intake Contact</fullName>
                </value>
                <value>
                    <fullName>Lawn Maintenance End Service Contact</fullName>
                </value>
                <value>
                    <fullName>Pool Maintenance End Service Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>